feat: update to jdk11 as latest lts